# notwrong

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  typos.toml
_extras/: links.md
bibliography/: index.md
critical/: index.md
docs/: index.html
docs/bibliography/: index.html
docs/conduct/: index.html
docs/contributing/: index.html
docs/critical/: index.html
docs/finale/: index.html
docs/further/: index.html
docs/glossary/: index.html
docs/intro/: index.html
docs/license/: index.html
docs/observational/: index.html
docs/productivity/: index.html
docs/qualitative/: index.html
docs/quantitative/: index.html
docs/running/: index.html
docs/stats/: index.html
docs/wrong/: index.html
finale/: index.md
further/: index.md
glossary/: index.md
intro/: index.md
observational/: index.md
productivity/: index.md
qualitative/: index.md
quantitative/: index.md
running/: index.md
stats/: index.md
wrong/: index.md
